# rs-eth-degen-data-fan

./: Cargo.toml  README.md  docker-compose.yaml
docker/: redis-node-1.conf  redis-node-2.conf
poc/: .gitignore  Cargo.toml  README.md  docker-compose.yaml  sniper.toml
poc/crates/block-explorer/: Cargo.toml
poc/crates/block-explorer/src/: blockexplorerapi.rs  etherscan.rs  lib.rs
poc/crates/cache/: Cargo.toml
poc/crates/cache/src/: lib.rs  redis.rs  tx_caching.rs
poc/crates/dex/: Cargo.toml
poc/crates/dex/src/: dex.rs  factory.rs  lib.rs  router.rs
poc/crates/eth-node/: Cargo.toml
poc/crates/eth-node/src/: block_processor.rs  block_watcher.rs  lib.rs  tx_pool.rs  tx_processor.rs
poc/crates/settings/: Cargo.toml
poc/crates/settings/src/: lib.rs
poc/crates/storage/: Cargo.toml
poc/crates/storage/src/: lib.rs  scylla.rs  tx_storage.rs
poc/docker/: redis-node-1.conf  redis-node-2.conf  redis-node-3.conf
poc/src/: cli.rs  smart-sniper.rs
src/lib/: lib.rs
src/lib/storage/: mod.rs
src/lib/storage/scylla/: mod.rs
src/lib/transaction/: mod.rs
