[package]
name = "bfc-degen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bfc_degen"
path = "src/lib/lib.rs"

[[bin]]
name = "watcher"
path = "src/bin/watcher.rs"

[[bin]]
name = "proc"
path = "src/bin/processor.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-nats = "0.29.0"
async-trait = "0.1.68"
dotenv = "0.15.0"
env_logger = "0.10.0"
ethers = { version = "2", features = ["ws", "rustls"] }
log = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["tokio-rustls", "serde_json"] }
scylla = {version = "0.8", optional = true}
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "signal"] }

[dev-dependencies]

[features]
default = ["scylla"]
scylla = ["dep:scylla"]
