[package]
name = "poc-eth"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["@bitflipped"]

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["@bitflipped"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "smart-sniper"
path = "src/smart-sniper.rs"

[lib]
name = "poc_eth"
path = "src/lib/lib.rs"

[dependencies]
eth-node = { path = "./crates/eth-node" }
block-explorer = { path = "./crates/block-explorer" }
cache = { path = "./crates/cache", features = ["redis"] }
settings = { path = "./crates/settings" }
storage = { path = "./crates/storage" }
dex = { path = "./crates/dex" }

anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.68"
ethers = { version = "2.0.4", features = ["ws", "rustls"] }
log = { version = "0.4", features = ["serde"] }
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["macros", "signal"] }
config = "0.13.3"
lazy_static = "1.4.0"
env_logger = "0.10.0"
redis = { version = "0.23.0", features = ["tokio-comp", "tokio-rustls-comp"] }
scylla = { version = "0.8" }
serde_json = "1.0.96"
tokio-redis = "0.0.0"
