[package]
name = "block-explorer"
version = "0.1.0"
license = "MIT"
authors = ["@bitflipped"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
dotenv = "0.15.0"
ethers = { version = "2.0.4", features = ["ws", "rustls"] }
log = { version = "0.4", features = ["serde"] }
serde_json = "1.0.96"
