[package]
name = "dex"
version = "0.1.0"
license = "MIT"
authors = ["@bitflipped"]
edition = "2021"

[dependencies]
block-explorer = { path = "../block-explorer" }

ethers = "2.0.4"
ansi_term = "0.12.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
