[package]
name = "eth-node"
version = "0.1.0"
license = "MIT"
authors = ["@bitflipped"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dex = { path = "../dex" }
cache = { path = "../cache" }

ansi_term = "0.12.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
ethers = "2.0.4"
log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
