[package]
name = "settings"
version = "0.1.0"
license = "MIT"
authors = ["@bitflipped"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dex = { path = "../dex" }

anyhow = { version = "1.0.71", features = ["backtrace"] }
serde = "1.0.163"
config = "0.13.3"
