[package]
name = "storage"
version = "0.1.0"
license = "MIT"
authors = ["@bitflipped"]
edition = "2021"

[lib]
name = "storage"
path = "src/lib.rs"

[dependencies]
ethers = "2.0.4"
ansi_term = "0.12.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.13.0", features = ["macros"] }
scylla = { version = "0.8.1" }
